kubernetes/base/ondemand.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ondemand
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ondemand
  template:
    metadata:
      labels:
        app: ondemand
    spec:
      containers:
      - name: ondemand
        image: slaclab/slac-ondemand:20200417.0
        imagePullPolicy: Always
        #livenessProbe:
        #  httpGet:
        #    path: /
        #    port: 443
        #  initialDelaySeconds: 5
        #  periodSeconds: 10
        volumeMounts:
        - name: slurm-config
          mountPath: /run/slurm/conf/
          readOnly: true
        - name: munge-socket
          mountPath: /var/run/munge/
        - name: ood-portal-config
          mountPath: /etc/ood/config/portal/
          readOnly: true
        - name: ood-clusterd-config
          mountPath: /etc/ood/config/clusters.d/
          readOnly: true
        #- name: ood-htpasswd
        #  mountPath: /etc/ood/config/htpasswd/
        #  readOnly: true
        - name: ood-certs
          mountPath: /etc/pki/tls/thisserver/
          readOnly: true
        # customisation
        - name: pun-html
          mountPath: /etc/ood/config/pun/html/
        - name: pun-html
          mountPath: /etc/ood/config/apps/dashboard/env
          subPath: pun.env
      volumes:
      - name: ood-portal-config
        configMap:
          name: ood-config
          items:
          - key: ood_portal.yml
            path: ood_portal.yml
      #- name: ood-clusterd-config
      #  configMap:
      #    name: ood-config
      #    items:
      #    - key: sdf_cluster.yml
      #      path: sdf.yml
      #- name: ood-htpasswd
      #  secret:
      #    secretName: auth
      #    defaultMode: 256
      #    items:
      #    - key: htpasswd
      #      path: .htpasswd
      - name: ood-certs
        secret:
          secretName: certs
          defaultMode: 420
      # customisation
      - name: pun-html
        configMap:
          name: pun-html
