kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ondemand
spec:
  selector:
    app: ondemand
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
