kubernetes/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ondemand
  namespace: ondemand-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  #  cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: ondemand-dev.slac.stanford.edu
    http:
      paths:
      - backend:
          serviceName: ondemand
          servicePort: 443
          #servicePort: 80
        path: /
  #tls:
  #- hosts:
  #  - ondemand-dev.slac.stanford.edu
  #  secretName: tls-ondemand
